--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -17,8 +17,11 @@
 ################################################################################
 
 #log4j.rootLogger=INFO, console
-log4j.rootLogger=INFO
+log4j.rootLogger=INFO,console
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
 log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p %-60c %x - %m%n
+
+log4j.logger.org.apache.flink=error
+log4j.logger.org.apache.kafka=error
